--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 .grid-container{
     background-color: Green;
 }
+.button button{
+    background-color: rgb(50, 186, 50);
+    width: 100px;
+    height: 40px;
+}
+.button{
+    display: flex;
+    gap: 15px;
+    padding: 20px;
+}
